# bron_kerbosch

./: CMakeLists.txt  README.md
include/: Benchmark.h  RecognizerData.h  parameter.h
include/recognizers/: CorrespondenceRecognizer.hpp  GraphBasedGeometricConsistencyRecognizer.hpp  GraphUtilities.hpp  IncrementalGeometricConsistencyRecognizer.hpp  MatchesPartitioner.hpp
src/recognizers/: GraphBasedGeometricConsistencyRecognizer.cpp  IncrementalGeometricConsistencyRecognizer.cpp
